<resources>
    <string name="app_name" translatable="false">QRCodeScanner</string>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="vibration">Vibration</string>
    <string name="turn_on_off_mobile_vibration">Turn On / Off Mobile Vibration</string>
    <string name="others">Others</string>
    <string name="settings">Settings</string>
    <string name="general">General</string>

    <!-- in strings.xml -->
    <string name="choose_language" translatable="false">Choose Language</string>


    <string name="setting_vibration_title">Vibration</string>
    <string name="setting_vibration_desc">Turn On / Off Mobile Vibration</string>

    <string name="setting_sound_title">Sound</string>
    <string name="setting_sound_desc">Turn On / Off Mobile Sound</string>

    <string name="setting_auto_copy_title">Auto Copy to clipboard</string>
    <string name="setting_auto_copy_desc">Turn On / Off Auto Copy</string>

    <string name="setting_auto_web_title">Auto Web Search</string>
    <string name="setting_auto_web_desc">Turn On / Off Auto Search</string>

    <string name="setting_save_history_title">Save History</string>
    <string name="setting_save_history_desc">Turn On / Off Save History</string>

    <string name="tap_to_encourage_us">Tap to encourage us</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="view_our_privacy_terms">View our privacy terms</string>


    <string name="scan_icon">Scan Icon</string>
    <string name="scanning_tips">Scanning Tips</string>
    <string name="avoid_strong_light_or_shadows_n_hold_your_phone_steady_n_don_t_tilt_or_rotate">• Avoid strong light or shadows\n• Hold your phone steady\n• Don’t tilt or rotate</string>
    <string name="got_it">Got it</string>
    <string name="title_name">Title Name</string>
    <string name="start_date_time">Start date/ time</string>
    <string name="end_date_time">End date/ time</string>
    <string name="please_enter_content">Please enter content</string>
    <string name="create">CREATE</string>
    <string name="phone_number">Phone Number</string>
    <string name="enter_your_content">Enter Your Content</string>
    <string name="name">Name</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="tools">Tools</string>
    <string name="social_media">Social Media</string>
    <string name="email">Email</string>
    <string name="dec_20_2023">Dec 20, 2023</string>
    <string name="mail_muazz9dtech_gmail_com_nsubject_confidential_nbody_lorem_ipsum">Mail: muazz9dtech@gmail.com\nSubject: confidential\nBody: Lorem ipsum...</string>
    <string name="see_more">See More</string>
    <string name="save">Save</string>
    <string name="style">Style</string>
    <string name="share">Share</string>
    <string name="print">Print</string>
    <string name="url">URL</string>
    <string name="email_address">Email Address</string>
    <string name="subject">Subject</string>
    <string name="enter_your_content_here">Enter Your Content Here...</string>
    <string name="facebook_url">Facebook URL</string>

    <string name="gps">GPS</string>
    <string name="scan">Scan</string>
    <string name="bookmark">Bookmark</string>
    <string name="instagram_url">Instagram URL</string>
    <string name="product_code">Product Code</string>
    <string name="my_name">My Name</string>
    <string name="cell_number">Cell Number</string>
    <string name="address">Address</string>
    <string name="birthday">Birthday</string>
    <string name="organization">Organization</string>
    <string name="paypal_link">Paypal Link</string>
    <string name="scanned_qr_code">Scanned QR Code</string>
    <string name="qr_code_scanner">QR CODE SCANNER</string>
    <string name="title">Title</string>
    <string name="subtitle">Subtitle</string>
    <string name="enter_your_text_content">Enter Your Text Content</string>
    <string name="tiktok_url">Tiktok URL</string>
    <string name="spotify_url">Spotify URL</string>
    <string name="twitter_url">Twitter URL</string>
    <string name="_92">92+</string>
    <string name="http">http://</string>
    <string name="https">https://</string>
    <string name="www">www.</string>
    <string name="com">.com</string>
    <string name="_923">92+</string>
    <string name="network_name">Network Name</string>
    <string name="password">Password</string>
    <string name="youtube_url">Youtube URL</string>
    <string name="label">Label</string>
    <!---->


    <!-- Tools -->
    <string name="email_two">Email</string>
    <string name="website">Website</string>
    <string name="wifi">Wi-Fi</string>
    <string name="contact">Contact</string>
    <string name="cell_phone">Cell Phone</string>
    <string name="sms">SMS</string>
    <string name="my_card">My Card</string>
    <string name="calendar">Calendar</string>
    <string name="gps_two">GPS</string>
    <string name="clipboard">Clipboard</string>
    <string name="text">Text</string>
    <string name="item_code">Item Code</string>

    <!-- Social -->
    <string name="facebook">Facebook</string>
    <string name="youtube">YouTube</string>
    <string name="whatsapp">WhatsApp</string>
    <string name="paypal">PayPal</string>
    <string name="twitter">Twitter</string>
    <string name="instagram">Instagram</string>
    <string name="spotify">Spotify</string>
    <string name="tiktok">TikTok</string>
    <string name="viber">Viber</string>
    <string name="discord">Discord</string>


    <string name="_youtube">CREATE</string>
    <string name="_wifi">CREATE</string>
    <string name="create_whatsapp">CREATE</string>
    <string name="create_website">CREATE</string>
    <string name="create_viber">CREATE</string>
    <string name="create_twitter">CREATE</string>
    <string name="create_tiktok">CREATE</string>
    <string name="create_text">CREATE</string>
    <string name="qr_creator_style">QR Creator</string>
    <string name="create_spotify">CREATE</string>
    <string name="app_setting">App Setting</string>
    <string name="others_new">Others</string>
    <string name="phone_no">Phone No.</string>
    <string name="please_enter_your_message">Please enter your message</string>
    <string name="create_sms">CREATE</string>
    <string name="saveqrscaned">Save</string>
    <string name="share_qrscanned">Share</string>
    <string name="result_goes_here">Result goes here</string>
    <string name="create_paypal">CREATE</string>
    <string name="please_enter_content_card">Please enter content</string>
    <string name="email_address_card">Email Address</string>
    <string name="create_product">CREATE</string>
    <string name="create_insta">CREATE</string>
    <string name="create_hitory">Create</string>
    <string name="qr_creator_history">QR Creator</string>
    <string name="create_gps">CREATE</string>
    <string name="create_fb">CREATE</string>
    <string name="create_email">CREATE</string>
    <string name="create_discord">CREATE</string>
    <string name="qr_creator_create">QR Creator</string>
    <string name="create_contact">CREATE</string>
    <string name="create_clipboard">CREATE</string>
    <string name="create_cell">CREATE</string>
    <string name="qr_creator_settings">QR Creator</string>


    <string name="create_botton_nav">Create</string>
    <string name="history_botton_nav">History</string>
    <string name="style_botton_nav">Style</string>
    <string name="settings_botton_nav">Settings</string>
    <string name="language">Language</string>
    <string name="english">English</string>


</resources>