<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/create"
        android:title="@string/create_botton_nav"
        android:icon="@drawable/baseline_create_24"/>

    <item
        android:id="@+id/history"
        android:title="@string/history_botton_nav"
        android:icon="@drawable/baseline_history_24"/>

    <item
        android:id="@+id/scan"
        android:title=""
        android:enabled="false"/>

    <item
        android:id="@+id/style"
        android:title="@string/style_botton_nav"
        android:icon="@drawable/baseline_style_24"/>
    <item
        android:id="@+id/settings"
        android:title="@string/settings_botton_nav"
        android:icon="@drawable/baseline_settings_24"/>

</menu>