<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/qrContainer"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/ic_back"
        app:title="Created QR"
        app:titleTextColor="@android:color/black" />

    <!-- Card -->
    <androidx.cardview.widget.CardView
        android:id="@+id/cardContent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="ExtraText">

            <!-- Icon and Title -->

            <ImageView
                android:id="@+id/imgTypeIcon"
                android:layout_width="34dp"
                android:layout_height="34dp"
                android:layout_marginStart="88dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/ic_scan_round"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/tvQrType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/email"
                android:textSize="16sp"
                android:textStyle="bold"
                app:layout_constraintStart_toEndOf="@id/imgTypeIcon"
                app:layout_constraintTop_toTopOf="@id/imgTypeIcon" />

            <TextView
                android:id="@+id/tvDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dec_20_2023"
                android:textColor="@color/gray"
                android:textSize="12sp"
                app:layout_constraintStart_toStartOf="@id/tvQrType"
                app:layout_constraintTop_toBottomOf="@id/tvQrType" />

            <!-- Divider -->
            <View
                android:id="@+id/divider"
                android:layout_width="0dp"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDate" />

            <!-- Details -->


            <TextView
                android:id="@+id/tvQrContent"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:padding="16dp"
                android:text="@string/mail_muazz9dtech_gmail_com_nsubject_confidential_nbody_lorem_ipsum"
                android:textSize="14sp"
                android:maxLines="3"
                android:ellipsize="end"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/divider" />


            <TextView
                android:id="@+id/tvSeeMore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="3dp"
                android:text="@string/see_more"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvQrContent" />
                app:layout_constraintTop_toBottomOf="@+id/divider" />

<!--             Inside the CardView's ConstraintLayout (just after imgQrCode) -->

            <ImageView
                android:id="@+id/imgQrCode"
                android:layout_width="218dp"
                android:layout_height="218dp"
                android:layout_marginTop="12dp"
                android:background="@color/light_gray"
                app:layout_constraintBottom_toTopOf="@+id/layoutActions"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvSeeMore"
                 />


            <LinearLayout
                android:id="@+id/layoutActions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="29dp"
                android:orientation="horizontal"
                android:gravity="center"
                android:weightSum="4"
                app:layout_constraintTop_toBottomOf="@id/imgQrCode"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <LinearLayout
                    android:id="@+id/layoutSave"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/imgSave"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_save"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/save"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:paddingBottom="16dp"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/imgStyle"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_style"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/style"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutShare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:paddingBottom="16dp"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/imgShare"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_share"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/share"
                        android:textSize="12sp"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutPrint"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingBottom="16dp"
                    android:orientation="vertical"
                    android:gravity="center"
                    android:clickable="true"
                    android:focusable="true">
                    <ImageView
                        android:id="@+id/imgPrint"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:src="@drawable/ic_print"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/print"
                        android:textSize="12sp"/>
                </LinearLayout>
            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>
